--- a/index.html
+++ b/index.html
@@ -1,21 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
+
     <title>Thimira kaluarachchi</title>
 </head>
+<!-- start body -->
+
 <body>
-    <h1><center>codemaster</center></h1>
-   <h2><i><center>we made people</center></i></h2>
-   <form>
-       <li><input type="Text" placeholder="Username"></li>
-       <li><input type="password"placeholder="password"></li>
-      <li> <input type="button" value="login" placeholder="Login"></li>
 
-   </form>
-   <img src="home9.jpg" alt="" >
 
+    <header id="home">
+        <div class="dark-overlay mt-5">
+            <div class="home-inside  container">
+                <div class="row">
+                    <div class="col-lg-8 d-block">
+                        <h1 class="text-light">
+                            <center>codemaster</center>
+                        </h1>
+                        <h2>
+                            <i>
+                                <center>we made people</center>
+                            </i>
+                        </h2>
+                    </div>
+                    <div class="col-lg-8 d-block">
+                            <form>
+                                    <li><input type="Text" placeholder="Username"></li>
+                                    <li><input type="password" placeholder="password"></li>
+                                    <li> <input type="button" value="login" placeholder="Login"></li>
+                                </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <!-- Scripts -->
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
 </body>
+<!-- end body -->
+
 </html>
