title header changed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
 
-    <title>Thimira kaluarachchi</title>
+    <title>Prasad Chathuranga</title>
 </head>
 <!-- start body -->
 
@@ -27,7 +27,7 @@
                 <div class="row">
                     <div class="col-lg-8 d-block">
                         <h1 class="text-light">
-                            <center>codemaster</center>
+                            <center>Prasad Chathuranga</center>
                         </h1>
                         <h2>
                             <i>
